--- a/responsive.css
+++ b/responsive.css
@@ -2,8 +2,9 @@
 @media screen and (max-width:576px) {
     body{
         max-width: 576px;
-        
+        margin: 0 auto;
     }
+    
 
     /* Header responsive */
     header{
@@ -48,8 +49,15 @@ select, input{
     width: 100%;
     
 }
-.btn-primary{
+.banner-btn{
     width: 100%;
+    font-size: 1rem;
+    font-weight: 700;
+    padding: 0.7rem;
+    color: #fff;
+    background-color: #FF5400;
+    border: none;
+    border-radius: 8px;
 }
     
 /* Popular tour responsive */
@@ -61,6 +69,9 @@ select, input{
 }
 .btn-primary{
     width: 150px;
+}
+.popular-tour-image{
+    width: 100%;
 }
 
 
