--- a/style.css
+++ b/style.css
@@ -34,8 +34,6 @@ body{
     background-color: #FF5400;
     border: none;
     border-radius: 8px;
-
-
 }
 .text-center{
     text-align: center;
@@ -58,6 +56,12 @@ body{
 
 /* Header Section styles start */
 /* header{
+    display: none;
+} */
+/* .banner{
+    display: none;
+} */
+/* .popular-tour{
     display: none;
 } */
 
@@ -120,16 +124,29 @@ body{
     border-radius: 8px;
 }
 input, select{
-    width: 150px;
+    width: 25%;
     font-size: 1rem;
     font-weight: 400;
-    padding: 0.7rem;
+    padding: 1rem;
     color: rgba(19,19,24,0.5);
     background-color: #FFF;
     border: none;
     border-radius: 8px;
+}
 
+.banner-btn{
+    width: 25%;
+    border-radius: 8px;
+    border: none;
+    font-size: 1rem;
+    background-color: #FF5400;
+    color: #fff;
+    padding: 1rem;
 
+}
+.banner-btn .fa-magnifying-glass{
+    font-size: 1.3rem;
+    padding-right: 10px;
 }
 
 
@@ -166,3 +183,93 @@ input, select{
     line-height: 1.5rem;
 }
 
+/* Destination section styles start */
+.destination{
+    /* width: 700px; */
+    text-align: center;
+    margin: 0 auto;
+}
+.destination-content {
+    width: 750px;
+    margin: 0 auto;
+}
+.destination-title{
+    font-size: 3rem;
+    font-weight: 800;
+    color: #131318;
+    padding-bottom: 1.5rem;
+}
+.destination-description{
+    font-size: 1rem;
+    font-weight: 400;
+    color: #131318;
+    padding-bottom: 3rem;
+    line-height: 1.5rem;
+}
+
+.destination-grid{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    grid-gap: 20px;
+    height: 1200px;
+
+}
+.maldives{
+    grid-column: 1 / span 6;
+    /* grid-row: 1 / span 4; */
+}
+.indonesia{
+    grid-column: 7 / span 6;
+    /* grid-row: 1 / span 4; */
+}
+.srilanka{
+    grid-column: 1 / span 4;
+    /* grid-row: 5 / span 4; */
+}
+.north-america{
+    grid-column: 5 / span 5;
+    /* grid-row: 5 / span 4; */
+}
+.kashmir{
+    grid-column: 10 / span 3;
+    /* grid-row: 5 / span 4; */
+}
+.bangladesh{
+    grid-column: 1 / span 7;
+    /* grid-row: 9 / span 4; */
+}
+.bandarban{
+    grid-column: 8 / span 5;
+    /* grid-row: 9 / span 4; */
+}
+
+.destination-grid img {
+    width: 100%;
+    height: 300px;
+    
+}
+
+
+.maldives,
+.indonesia,
+.srilanka,
+.north-america,
+.kashmir,
+.bangladesh,
+.bandarban{
+    position: relative;
+}
+.country-name {
+    position: absolute;
+    /* left: 50%; */
+    top: 50%;
+    width: 100%;
+    color: #FFF;
+    font-size: 2rem;
+}
+
+
+
+
+/* Destination section styles end */
