--- a/style.css
+++ b/style.css
@@ -212,36 +212,37 @@ input, select{
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(12, 1fr);
     grid-gap: 20px;
-    height: 1200px;
+    /* height: 1200px; */
+    /* border: 2px solid red; */
 
 }
 .maldives{
     grid-column: 1 / span 6;
-    /* grid-row: 1 / span 4; */
+    grid-row: 1 / span 4;
 }
 .indonesia{
     grid-column: 7 / span 6;
-    /* grid-row: 1 / span 4; */
+    grid-row: 1 / span 4;
 }
 .srilanka{
     grid-column: 1 / span 4;
-    /* grid-row: 5 / span 4; */
+    grid-row: 5 / span 4;
 }
 .north-america{
     grid-column: 5 / span 5;
-    /* grid-row: 5 / span 4; */
+    grid-row: 5 / span 4;
 }
 .kashmir{
     grid-column: 10 / span 3;
-    /* grid-row: 5 / span 4; */
+    grid-row: 5 / span 4;
 }
 .bangladesh{
     grid-column: 1 / span 7;
-    /* grid-row: 9 / span 4; */
+    grid-row: 9 / span 4;
 }
 .bandarban{
     grid-column: 8 / span 5;
-    /* grid-row: 9 / span 4; */
+    grid-row: 9 / span 4;
 }
 
 .destination-grid img {
@@ -273,3 +274,216 @@ input, select{
 
 
 /* Destination section styles end */
+
+
+/* Choose Us section styles starts here */
+.choose-us{
+    /* border: 2px solid red; */
+    padding: 50px 0;
+}
+.choose-us-content{
+    width: 650px;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 30px;
+
+}
+.choose-us-title{
+    font-size: 3rem;
+    padding-bottom: 15px;
+    color: rgba(19, 19, 24, 1);
+    font-weight: 700;
+    
+}
+.choose-us-description{
+    font-size: .8rem;
+    line-height: 25px;
+    padding-bottom: 15px;
+    
+    color: rgba(19, 19, 24, 0.7);
+}
+
+.choose-us-items{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4%;
+    row-gap: 40px;
+}
+.choose-us-item1{
+    width: 48%;
+    background-color: rgba(251, 181, 99, 0.08);
+    padding: 40px;
+    border-radius: 10px;
+    border: 1px solid rgba(251, 180, 99, 0.349);
+}
+
+.choose-us-item2{
+    width: 48%;
+    background-color: rgba(41, 206, 246, 0.08);
+    padding: 40px;
+    border-radius: 15px;
+    border: 1px solid rgba(41, 205, 246, 0.322);
+}
+
+.choose-us-item3{
+    width: 50%;
+    background-color: rgba(233, 68, 68, 0.08);
+    padding: 40px;
+    border-radius: 10px;
+    margin: 0 auto;
+    border: 1px solid rgba(233, 68, 68, 0.363);
+}
+
+.choose-us-item-icon{
+font-size: 2rem;
+padding-bottom: 15px;
+}
+
+.choose-us-item-title{
+    font-size: 2rem;
+    padding-bottom: 15px;
+    color: rgba(19, 19, 24, 1);
+}
+
+.choose-us-item-description{
+    font-size: 1rem;
+    padding-bottom: 15px;
+    color: rgba(90, 90, 93, 1);
+}
+
+
+
+
+/* Choose Us section styles ends here */
+
+
+
+/* Deals section styles starts here */
+.deals{
+    /* border: 2px solid red; */
+    padding: 50px 0;
+}
+.deals-content{
+    width: 650px;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 30px;
+
+}
+.deals-title{
+    font-size: 3rem;
+    padding-bottom: 15px;
+    color: rgba(19, 19, 24, 1);
+    font-weight: 700;
+    
+}
+.deals-description{
+    font-size: .8rem;
+    line-height: 25px;
+    padding-bottom: 15px;
+    
+    color: rgba(19, 19, 24, 0.7);
+}
+
+.deals-items{
+
+}
+.deals-item-1,
+.deals-item-3{
+background-image: url(./assets/Images/Group\ 39.png);
+background-size: cover;
+background-repeat: no-repeat;
+width: 100%;
+height: 500px;
+position: relative;
+border-radius: 15px;
+}
+.deals-item-2{
+    background-image: url(./assets/Images/Group\ 40.png);
+    background-size: cover;
+background-repeat: no-repeat;
+width: 100%;
+height: 500px;
+margin: 20px 0;
+position: relative;
+border-radius: 15px;
+}
+.deals-card1,
+.deals-card3{
+width: 600px;
+height: 400px;
+background-color: #fff;
+position: absolute;
+top: 10%;
+right: 5%;
+border-radius: 15px;
+padding: 45px;
+}
+
+.deals-card2{
+width: 600px;
+height: 400px;
+background-color: #fff;
+position: absolute;
+top: 10%;
+left: 5%;
+border-radius: 15px;
+padding: 45px;
+}
+.deals-card-icons {
+    
+    padding-right: 30px;
+    display: flex;
+    
+    
+}
+.deals-card-icon{
+    color: #F44336;
+    font-size: 1.2rem;
+    padding-right: 10px;
+    
+
+}
+.deals-card-icon-title{
+    
+    color: #000;
+}
+.deals-card-icon1,
+.deals-card-icon2,
+.deals-card-icon3 {
+    
+    padding-right: 40px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.deals-card-title{
+font-size: 2rem;
+font-weight: 700;
+padding-bottom: 20px;
+}
+.deals-card-description{
+    font-size: 1rem;
+    line-height: 25px;
+    font-weight: 400;
+    padding-bottom: 20px;
+}
+.deals-card-price{
+    font-size: 1.5rem;
+    line-height: 25px;
+    font-weight: 700;
+    padding-bottom: 20px;
+    color: rgba(255, 84, 0, 1);
+}
+.deals-card-btn{
+font-size: 1.5rem;
+padding: 15px 20px;
+color: #FFF;
+background-color: rgba(255, 84, 0, 1);
+border: none;
+border-radius: 10px;
+}
+/* Deals section styles ends here */
