--- a/style.css
+++ b/style.css
@@ -527,7 +527,7 @@ display: flex;
 justify-content: space-between;
 }
 .newsletter-content{
-    width: 45%;
+    width: 40%;
     padding: 25px;
     border: 1px solid rgba(255, 84, 0, 1);
     border-radius: 10px;
@@ -556,9 +556,28 @@ justify-content: space-between;
     
 }
 .newsletter-image{
-    width: 50%;
+    width: 55%;
+    position: relative;
 }
 .newsletter-image img{
     width: 100%;
+}
+
+.newsletter-image-overlay-btn{
+    color: #fff;
+    background-color: rgba(255, 84, 0, 1);
+    border: none;
+    border-radius: 10px;
+    padding: 15px 35px;
+    position: absolute;
+    right: 5px;
+    bottom: 60px;
+    transform: rotate(-35deg);
+}
+.newsletter-image-overlay-btn span{
+    padding-bottom: px;
+}
+.newsletter-image-overlay-btn h3{
+    padding-top: 10px;
 }
 /* Newsletter section styles ends here */
